--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,1 +1,31 @@
-// @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+label {
+	font-size: 12px;
+	margin-bottom: 2px;
+}
+
+.form-group {
+	margin-bottom: 8px;
+}
+
+.form-control {
+	height: 30px;
+}
+
+.select2-container--default .select2-selection--single, .select2-selection .select2-selection--single {
+	height: 30px;
+}
+
+.input-sm {
+	padding: 5px 8px;
+}
+
+.datepicker {
+	z-index:1151;
+}
+.btn-export-xls-koi-component {
+	color: green;
+}
+
+.btn-export-pdf-koi-component {
+	color: red;
+}
